--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -39,7 +39,7 @@
 		<div class="col-md-12">
 			<div class="btn-toolbar" role="toolbar" aria-label="...">
 				<div class="btn-group" role="group" aria-label="...">
-                    <button type="button" class="btn btn-default" title='Create Objective' data-toggle="modal" data-target="#create_objective_modal"><img src="{% static 'img/goal.gif' %}" align="absmiddle"></button>
+                    <button id="create_objective_btn" type="button" class="btn btn-default" title='Create Objective' data-toggle="modal" data-target="#objective_modal"><img src="{% static 'img/goal.gif' %}" align="absmiddle"></button>
                     <button type="button" class="btn btn-default" title='Create Obstacle' data-toggle="modal" data-target="#create_obstacle_modal"><img src="{% static 'img/dynamite.gif' %}" align="absmiddle"></button>
                     <button type="button" class="btn btn-default" title='Create Condition' data-toggle="modal" data-target="#create_condition_modal"><img src="{% static 'img/condition.gif' %}" align="absmiddle"></button>
                     <button type="button" class="btn btn-default" title='Create Context Constraint' data-toggle="modal" data-target="#create_constraint_modal"><img src="{% static 'img/constraint.gif' %}" align="absmiddle"></button>
@@ -229,13 +229,17 @@
 </div>
 
 
+<!------------------------------------------------>
+<!--                    Modals                  -->
+<!------------------------------------------------>
+
 <!-- 1. Create Objective Modal -->
-<div class="modal fade" id="create_objective_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="objective_modal" tabindex="-1" role="dialog" aria-labelledby="modal_title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="objective_modal_label">Create Objective</h4>
+        <h4 class="modal-title" id="modal_title">Create Objective</h4>
       </div>
       <div class="modal-body">
         <form>
@@ -243,96 +247,58 @@
                 <div class="col-md-9">
                   <div class="form-group">
                     <label for="objective_name">Objective Name</label>
-                    <input type="text" class="form-control" id="objective_name" placeholder="Enter objective name">
+                    <input type="text" class="form-control" id="objective_name" placeholder="Enter objective name" required>
                   </div>              
                 </div>  
-                <div class="col-md-3"></div>
             </div>
             <div class="row">
                 <div class="col-md-9">
-                          <div class="form-group">
-            <label for="exampleInputPassword1">Type</label>
-                <div class="dropdown">
-                  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-                    Select Objective Type&nbsp;
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Achieve</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Ensure</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Improve</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Increase</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Keep</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Maintain</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Make</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Notify</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Provide</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Reduce</a></li>
-
-                  </ul>
-                </div>
-          </div>
+                    <div class="form-group">
+                        <label for="objective_type">Objective Type</label>
+                        <div class="dropdown">
+                          <button class="btn btn-default dropdown-toggle" type="button" id="dropdown_objective_type" data-toggle="dropdown" aria-expanded="true">
+                            <div id="objective_type_label" style="display: inline-block;">Select</div>
+                            <span class="caret"></span>
+                          </button>
+                          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown_objective_type">
+                            <li role="presentation"><a id="action-1" role="menuitem" tabindex="-1" href="#">Achieve</a></li>
+                            <li role="presentation"><a id="action-2" role="menuitem" tabindex="-1" href="#">Ensure</a></li>
+                            <li role="presentation"><a id="action-3" role="menuitem" tabindex="-1" href="#">Improve</a></li>
+                            <li role="presentation"><a id="action-4" role="menuitem" tabindex="-1" href="#">Increase</a></li>
+                            <li role="presentation"><a id="action-5" role="menuitem" tabindex="-1" href="#">Keep</a></li>
+                            <li role="presentation"><a id="action-6" role="menuitem" tabindex="-1" href="#">Maintain</a></li>
+                            <li role="presentation"><a id="action-7" role="menuitem" tabindex="-1" href="#">Make</a></li>
+                            <li role="presentation"><a id="action-8" role="menuitem" tabindex="-1" href="#">Notify</a></li>
+                            <li role="presentation"><a id="action-9" role="menuitem" tabindex="-1" href="#">Provide</a></li>
+                            <li role="presentation"><a id="action-10" role="menuitem" tabindex="-1" href="#">Reduce</a></li>
+                          </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
+                <div class="col-md-9">
+                  <div class="form-group">
+                    <label for="abstract_context_condition">Abstract Context Condition (Text)</label>
+                    <input id="condition_input" type="text" class="form-control" id="abstract_context_condition" placeholder="Enter text">
+                    <input id="add_condition" class="btn btn-default" type="button" value="Add Condition to List">
+                  </div>
+                </div>  
             </div>
-            <div class="row">
-            </div>            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-          <div class="form-group">
-            <label for="exampleInputEmail1">Objective Name</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter objective name">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Type</label>
-                <div class="dropdown">
-                  <button class="btn btn-default dropdown-toggle btn-block" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-                                
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Achieve</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Ensure</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Improve</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Increase</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Keep</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Maintain</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Make</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Notify</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Provide</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Reduce</a></li>
 
-                  </ul>
-                </div>
-          </div>
-          <div class="form-group">
-            <label for="exampleInputEmail12">Abstract Context Condition (Text)</label>
-            <input type="text" class="form-control" id="exampleInputEmail12" placeholder="Enter text">
-            <input class="btn btn-default" type="button" value="Add Condition to List">
-          </div>
-            <select multiple class="form-control">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>     
-            <input class="btn btn-default" type="button" value="Remove Condition from List">     
+
+
+            <div class="row">
+                <div class="col-md-9">
+                  <div class="form-group">
+                    <label for="condition_list">List of Abstract Context Conditions</label>
+                    <select id="condition_list" multiple class="form-control">
+                        <option value=2>afdsafadsfadsfadsfdsaf</option>
+                    </select>     
+                    <input id="remove_condition" class="btn btn-default" type="button"  value="Remove Condition from List1">     
+                  </div>
+                </div>  
+            </div>
         </form>
       </div>
       <div class="modal-footer">
@@ -595,14 +561,126 @@
 
 {% block scripts %}
 <script>
+    var mode = 0; // edit
     $(function() {
       // Handler for .ready() called.
-        $('#create_objective_modal').on('show.bs.modal', function(e) {
-
-        var $modal = $(this);
-        alert(this);
+        $('#objective_modal').on('show.bs.modal', function(e) {
+            if (mode == 1) {
+                $('#modal_title').text("Create New Objective");        
+            }
+            else
+                $('#modal_title').text("Edit Objective");        
         })
+        //$("remove_condition").prop('disabled', true);
+        
     });
+    
+// Handlers
+
+// Modal 1 - handlers
+$( '#create_objective_btn' ).click(function() {
+    mode = 1;
+});
+
+$("#dropdownMenuX").change(function(event) {
+    alert('hello');
+    var property_name = event.target.id;
+    var property_value = $( '#'+event.target.id ).val();
+    //alert(property_name + ':' + property_value);
+    //$('#dropdownMenu1').text(property_value);     
+    
+    //set_user_settings(property_name, property_value);
+    
+});
+
+$("#action-1").click(function(e){
+    change_select_label(e);
+});
+
+$("#action-2").click(function(e){
+    change_select_label(e);
+});
+
+$("#action-3").click(function(e){
+    change_select_label(e);
+});
+
+$("#action-4").click(function(e){
+    change_select_label(e);
+});
+
+$("#action-5").click(function(e){
+    change_select_label(e);
+});
+
+$("#action-6").click(function(e){
+    change_select_label(e);
+});
+
+$("#action-7").click(function(e){
+    change_select_label(e);
+});
+
+$("#action-8").click(function(e){
+    change_select_label(e);
+});
+
+$("#action-9").click(function(e){
+    change_select_label(e);
+});
+
+$("#action-10").click(function(e){
+    change_select_label(e);
+});
+
+
+$("#add_condition").click(function(e){
+    
+    var value = $('#condition_input').val();
+    
+    
+    if (!$.trim(value)) {
+        alert('error empty value');
+        $( "#condition_input" ).focus();
+        return;
+    }
+
+    var option = '<option value=1>' + value + '</option>';
+    $("#condition_list").append(option);
+    // clear input value
+    $('#condition_input').val('');
+
+    return;
+});
+
+
+$("#remove_condition").click(function(e){
+ 
+    var value = $('#condition_list').val();
+        
+    if (!value) {
+        alert('error: option not selected');
+        return;
+    }
+    alert ('value is ' + value);
+    var option = '<option value=1>' + value + '</option>';
+    $("#condition_list").append(option);
+    // clear input value
+    $('#condition_input').val('');
+
+    return;
+});
+
+
+
+// helper
+function change_select_label(e) {
+    var property_value = $( '#'+e.target.id ).text();
+    $('#objective_type_label').text(property_value);
+}
+
+
+    
 </script>
 
 {% endblock scripts %}
