--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
             .padding-top{
                 padding-top:7.5px;
             }
+            .padding-top-small{
+                padding-top:2.5px;
+            }
             .border_one {
                 border-style: solid;
                 border-width: 1.5px;
