--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -134,13 +134,28 @@
             <div class="border_one" style="height:65vh;">
 
                 {% if object_type == 1 %}
-                    <br>
-                    <p>Placeholder for Objectives</p>
-                    <ul>
-                      <li>Test data 1</li>
-                      <li>Test data 2</li>
-                      <li>Test data 3</li>
-                    </ul>                
+                <table id="testtable" class="table table-condensed table-hover">
+                <thead>
+                <tr>
+                <th class="col-md-1">#</th>
+                <th class="col-md-11">Objective</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                <th scope="row">1</th>
+                <td data-toggle="context" data-target="#context-menu">Mark</td>
+                </tr>
+                <tr>
+                <th scope="row">2</th>
+                <td data-toggle="context" data-target="#context-menu">Jacob</td>
+                </tr>
+                <tr>
+                <th scope="row">3</th>
+                <td data-toggle="context" data-target="#context-menu">Larry</td>
+                </tr>
+                </tbody>
+                </table>
                 {% endif %}
 
                 {% if object_type == 2 %}  
@@ -285,17 +300,13 @@
                   </div>
                 </div>  
             </div>
-
-
-
             <div class="row">
                 <div class="col-md-9">
                   <div class="form-group">
                     <label for="condition_list">List of Abstract Context Conditions</label>
                     <select id="condition_list" multiple class="form-control">
-                        <option value=2>afdsafadsfadsfadsfdsaf</option>
                     </select>     
-                    <input id="remove_condition" class="btn btn-default" type="button"  value="Remove Condition from List1">     
+                    <input id="remove_condition" class="btn btn-default" type="button" disabled="false" value="Remove Condition from List1">     
                   </div>
                 </div>  
             </div>
@@ -303,7 +314,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary">Save Objective</button>
       </div>
     </div>
   </div>
@@ -557,12 +568,20 @@
   </div>
 </div>
 
+<div id="context-menu">
+  <ul class="dropdown-menu" role="menu">
+    <li><a tabindex="-1" href="#">Action</a></li>
+    <li><a tabindex="-1" href="#">Separated link</a></li>
+  </ul>
+</div>
+
 {% endblock content %}
 
 {% block scripts %}
 <script>
     var mode = 0; // edit
     $(function() {
+    
       // Handler for .ready() called.
         $('#objective_modal').on('show.bs.modal', function(e) {
             if (mode == 1) {
@@ -574,6 +593,15 @@
         //$("remove_condition").prop('disabled', true);
         
     });
+
+        $("#testtable td").contextMenu({
+            menuSelector: "#contextMenu",
+            menuSelected: function (invokedOn, selectedMenu) {
+                var msg = "You selected the menu item '" + selectedMenu.text() +
+                    "' on the value '" + invokedOn.text() + "'";
+                console.log(msg);
+            }
+        });        
     
 // Handlers
 
@@ -640,19 +668,35 @@ $("#add_condition").click(function(e){
     
     
     if (!$.trim(value)) {
-        alert('error empty value');
+        // error
+        alert('error: empty value');
         $( "#condition_input" ).focus();
         return;
     }
 
-    var option = '<option value=1>' + value + '</option>';
+    var option_values = [];
+    $('#condition_list option').each(function() {
+        option_values.push($(this).val());
+    });    
+        
+    for (i = 0; i < option_values.length; i++) { 
+        if (option_values[i] == value.split(' ').join('_')) {
+            alert('error: already exists ' + value.split(' ').join('_'));
+            $( "#condition_input" ).focus();
+            return;
+        }
+    }
+
+    // add to list
+    var option = '<option value=' + value.split(' ').join('_') + '>' + value + '</option>';
     $("#condition_list").append(option);
+
     // clear input value
     $('#condition_input').val('');
+    $("#remove_condition").prop('disabled', false);
 
     return;
 });
-
 
 $("#remove_condition").click(function(e){
  
@@ -662,11 +706,17 @@ $("#remove_condition").click(function(e){
         alert('error: option not selected');
         return;
     }
-    alert ('value is ' + value);
-    var option = '<option value=1>' + value + '</option>';
-    $("#condition_list").append(option);
-    // clear input value
-    $('#condition_input').val('');
+    
+    //var option = '<option value=1>' + value + '</option>';
+    var selector = "#condition_list option[value='" + value + "']";
+    
+    $(selector).remove();
+    
+    var size = $('#condition_list option').size()
+    
+    if (!size) {
+        $("#remove_condition").prop('disabled', true);
+    }
 
     return;
 });
