--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,7 @@
 		<script src="{% static 'js/vendor/jquery-1.11.2.min.js' %}"></script>
         <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
 		<script src="{% static 'js/vendor/jquery-ui.js' %}"></script>
+        <script src="{% static 'js/vendor/bootstrap-contextmenu.js' %}"></script>
         <script src="{% static 'js/main.js' %}"></script>
         
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
