--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -333,7 +333,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary">Save Objective</button>
+        <button id="save_objective_btn" type="button" class="btn btn-primary">Save Objective</button>
       </div>
     </div>
   </div>
@@ -625,19 +625,56 @@
 
 // Modal 1 - handlers
 $( '#create_objective_btn' ).click(function() {
+
+    // set to new mode
     mode = 1;
+    
+    // clear all fields
+    $('#objective_name').val('');
+    $('#objective_type_label').text('Select');
+    $('#condition_input').val('');
+    $('#condition_list').find('option').remove();
+    
 });
 
-$("#dropdownMenuX").change(function(event) {
-    alert('hello');
-    var property_name = event.target.id;
-    var property_value = $( '#'+event.target.id ).val();
-    //alert(property_name + ':' + property_value);
-    //$('#dropdownMenu1').text(property_value);     
+$( '#save_objective_btn' ).click(function() {
+    // validate all fields
+    var name = $('#objective_name').val();
+
+    if (!name) {
+        alert('Error: objective name cannot be empty.');
+        $( "#objective_name" ).focus();
+        return;
+    }
     
-    //set_user_settings(property_name, property_value);
-    
-});
+    var type = $('#objective_type_label').text();
+    if (type == 'Select') {
+        alert('Error: objective type not selected.');      
+    }
+
+    var conditions = [];
+    $('#condition_list option').each(function() {
+        conditions.push($(this).val().split(' ').join('_'));
+    });    
+
+    // create data
+    var objective_data = new Objective(name, type, conditions);
+
+    // post data
+    $.ajax({
+        method: "POST",
+        url: "{% url 'dashboard' %}",
+        data: objective_data
+    }).done(function( msg ) {
+        alert( "Data Saved: " + msg );
+    });    
+    });
+
+function Objective(name, type, conditions) {
+    this.name = name;
+    this.type = type;
+    this.conditions = conditions;
+}
 
 $("#action-1").click(function(e){
     change_select_label(e);
@@ -754,6 +791,31 @@ function edit_objective(id) {
     $('#objective_name').val("test");
     $('#objective_modal').modal('show');
 }
+
+/*
+$.ajax({
+  method: "POST",
+  url: "some.php",
+  data: { name: "John", location: "Boston" }
+})
+  .done(function( msg ) {
+    alert( "Data Saved: " + msg );
+  });
+
+
+
+
+function person(first, last, age, eye) {
+    this.firstName = first;
+    this.lastName = last;
+    this.age = age;
+    this.eyeColor = eye;
+}
+var myFather = new person("John", "Doe", 50, "blue");
+var myMother = new person("Sally", "Rally", 48, "green");
+
+
+*/
     
 </script>
 
