--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -333,7 +333,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button id="save_objective_btn" type="button" class="btn btn-primary">Save Objective</button>
+        <button id="save_objective_btn" type="button" class="btn btn-primary">Save</button>
       </div>
     </div>
   </div>
@@ -639,7 +639,7 @@ $( '#create_objective_btn' ).click(function() {
 
 $( '#save_objective_btn' ).click(function() {
     // validate all fields
-    var name = $('#objective_name').val();
+    var name = $('#objective_name').val().split(' ').join('_');
 
     if (!name) {
         alert('Error: objective name cannot be empty.');
