--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -661,7 +661,7 @@ $( '#save_objective_btn' ).click(function() {
         
         var objective_name = msg['objective_name'];
         var created = msg['created'];
-        alert(created);
+        //alert(created);
         
         created = (created === "true");
         
@@ -785,7 +785,6 @@ $("#remove_condition").click(function(e){
 
     return;
 });
-
 
 // helper
 function change_select_label(e) {
