create, edit, delete obstacle objects

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,8 @@
         <script src="{% static 'js/vendor/bootstrap-contextmenu.js' %}"></script>
         <script src="{% static 'js/main.js' %}"></script>
         <script src="{% static 'js/csrf.js' %}"></script>
+        <script src="{% static 'js/objective.js' %}"></script>
+        <script src="{% static 'js/obstacle.js' %}"></script>
         
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
